--- a/stylesheets/module/_layout.scss
+++ b/stylesheets/module/_layout.scss
@@ -26,7 +26,21 @@
   }
 
   &.has-header.has-footer .page-content.fullscreen {
-    padding-bottom: 110px;
+    @include media-breakpoint-up(lg) {
+      padding-bottom: 110px;
+    }
+    @include media-breakpoint-down(lg) {
+      padding-bottom: 105px;
+    }
+    @include media-breakpoint-down(md) {
+      padding-bottom: 100px;
+    }
+    @include media-breakpoint-down(sm) {
+      padding-bottom: 95px;
+    }
+    @include media-breakpoint-down(xs) {
+      padding-bottom: 90px;
+    }
   }
 
   &.has-header .page-content {
@@ -125,11 +139,6 @@
   form {
     display: flex;
     flex-flow: row nowrap;
-
-    @include media-breakpoint-down(xs, portrait) {
-      // order: 2;
-      // flex-flow: column nowrap;
-    }
 
     .input-block {
       flex: 1 0 auto;
